# ocrad

./: .clang-format  CMakeLists.txt  ChangeLog  INSTALL  Makefile.in  NEWS  README  arg_parser.cc  arg_parser.h  bitmap.cc  bitmap.h  blob.cc  blob.h  character.cc  character.h  character_r11.cc  character_r12.cc  character_r13.cc  common.cc  common.h  configure  feats.cc  feats.h  feats_test0.cc  feats_test1.cc  histogram.h  iso_8859.cc  iso_8859.h  main.cc  mask.cc  mask.h  ocradcheck.cc  ocradlib.cc  ocradlib.h  page_image.cc  page_image.h  page_image_io.cc  profile.cc  profile.h  rational.cc  (+18 more)
.github/workflows/: build.yml  check-formatting.yml
doc/: ocrad.1  ocrad.info  ocrad.texi
java/: com_ian678_ocrad_Ocrad.cc  com_ian678_ocrad_Ocrad.h
testsuite/: check.sh
tools/: check-format.sh
